SERVER-59806 Change upsert for insert when writing chunks in create sharded collection path